# RAGfun

./: .env.local.example  .gitignore  README.md  RUN_RUGFUNSOTA.md  doc1.txt  doc2.txt  docker-compose-semantic.yml  docker-compose.shared-vllm.override.yml  docker-compose.test.yml  docker-compose.yml  env.example  run-unified.sh  stop-unified.sh
RAGagent/: README.md
RAGcircle/: .dockerignore  .gitignore  Dockerfile.nginx  README.md  bridge.py  docker-compose-full.yaml  docker-compose-ragcircle.yaml  docker-compose.yaml
RAGcircle/doc_processor_v2/: Dockerfile  README.md  TODO.md  _test_store.py  amqp_consumer.py  chat_test.py  check_stores.py  chunker.py  config.py  db_ops.py  docker-compose.yaml  embed_caller.py  env.example  events.py  extraction.py  index_logic.py  ingestion.py  main.py  models.py  pipeline.py  processing.py  pyproject.toml  requirements.txt  s3_events.py  status.py  store.py
RAGcircle/doc_processor_v2/output/: Declaration_Pg1of1_AC_res.json
RAGcircle/doc_processor_v2/py/: amqp_consumer.py  config.py  embed_caller.py  errors.py  extraction.py  hash_strategy.py  ingestion.py  main.py  models.py  pipeline.py  processing.py  project_config.py  project_crud.py  pyproject.toml  s3_events.py  store.py
RAGcircle/doc_processor_v2/tests/: chat_test.py  check_stores.py  conftest.py  test_events.py  test_file_prep.py  test_pdf_prep.py  test_retry_count.py
RAGcircle/gate_v2/: Dockerfile  README.md  env.example  pyproject.toml
RAGcircle/gate_v2/client/: README.md  __init__.py  client.py  sdk.py  test_gateway_methods.py
RAGcircle/gate_v2/py/: __init__.py  auth.py  collectors.py  database_ops.py  main.py  projects.py  settings.py  storage.py
RAGcircle/gate_v2/test/: create_and_sub.py  multipart_upload_test.py
RAGcircle/generator_contract/: pyproject.toml
RAGcircle/generator_contract/src/generator_contract/: __init__.py  api.py
RAGcircle/retrieval_contract/: pyproject.toml
RAGcircle/retrieval_contract/src/retrieval_contract/: __init__.py  api.py  chunks.py  plan_builder.py  steps.py
RAGcircle/retrieval_v2/: Dockerfile  FUTURE_STEPS.md  env.example  pyproject.toml
RAGcircle/retrieval_v2/py/: api.py  config.py  embedder.py  main.py  models.py  project_deps.py  ranking.py  reranker.py  retriever.py  store.py
RAGcircus/: README.md  bridge.py  docker-compose.yaml  s3-config.json  s3-filer.toml  setup copy.py  test.txt  webhook.Dockerfile
agent-search/: Dockerfile  requirements.txt
agent_common/: __init__.py  events.py  gate_client.py  prompts.py  retrieval.py  web_search.py
bench/: __init__.py  bright_eval.py
bright_eval/: run_bright_eval.sh  run_bright_eval_gate.sh
client/: README.md  __init__.py  client.py  example_default_project_readonly.py  pineapple_secret_message.txt  pyproject.toml  requirements.txt  sdk.py  test_default_project_policy.py  test_gateway_methods.py  test_streaming_endpoints.py
deep-research/: Dockerfile  requirements.txt
doc-processor/: Dockerfile  requirements.txt
docs/: AGENT_IMPROVEMENTS.md  AGENT_SEARCH.md  AGENT_SEARCH_AND_DEEP_RESEARCH.md  BRIGHT_CHUNKING_COMPARISON.md  BRIGHT_VALIDATION.md  DEEP_RESEARCH_ODS_MULTITENANCY_AUTH.md  DEEP_RESEARCH_SETUP_AND_ODS_GAPS.md  ENDPOINTS_EXAMPLES.md  INGESTION_FLOW.md  LOCAL_DEPLOY_SHARED_VLLM.md  RAG_DIFF_OUR_VS_OLD.md  RAG_pipe.md  (+1 more)
eval/: corpus_stats.py  (+11 more)
sdk/: README.md  pyproject.toml
sdk/ragfun_sdk/: __init__.py  client.py  errors.py  models.py
(+347 files in other folders)
