[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragfun-sdk"
version = "0.1.0"
description = "Python SDK for rag_fun gate service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ragfun_sdk*"]
