[project]
name = "doc-processor-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.8",
    "aiobotocore>=3.1.0",
    "fastapi>=0.128.0",
    "frontend>=0.0.3",
    "httpx[http2]>=0.28.1",
    "lxml>=6.0.2",
    "opensearch-py>=3.1.0",
    "pdf2image>=1.17.0",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.2",
    "semchunk>=3.2.5",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
]
