[project]
name = "presign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiobotocore>=3.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "generator-contract",
    "httpx>=0.28.1",
    "opensearch-py>=3.1.0",
    "pydantic-settings>=2.12.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "retrieval-contract",
    "returns>=0.26.0",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
retrieval-contract = { path = "../retrieval_contract" }
generator-contract = { path = "../generator_contract" }
