[project]
name = "retrieval-contract"
version = "0.1.0"
description = "Shared schema between retrieval and generator services"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retrieval_contract"]
